--- a/PNC/index.html
+++ b/PNC/index.html
@@ -42,10 +42,13 @@
         <div class="container">
             <section id="main_content">
                 <div id="links">
+                    <a href="./faqs">Frequently Asked Questions</a>
                     <a href="./unitstats">Unit Stats</a>
                     <a href="./unitdata">Unit Data</a>
+                    <a href="./unitskills">Unit Skills</a>
                     <a href="./googledocs">Guides</a>
                     <a href="https://neuralen.modoo.at/" class="tooltip">NC Skin info<span class="tooltiptext">Managed by Pineapple</span></a>
+                    <a href="./faqs/changelog">Changelog</a>
                 </div>
             </section>
         </div>
