--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>November 08, 2023</summary>
+                    Added IDs 00475, 00476.<br>
+                    Updated ID 00096.
+                </details>                
+                <details>
                     <summary>November 01, 2023</summary>
                     Added IDs 00471, 00472, 00473, 00474.
                 </details>                
