--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -9,7 +9,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./index.css">
-        <link rel="stylesheet" href="./stats.css">
         <link rel="stylesheet" href="./algorithms.css">
         
         <!-- Setup theme-color -->
@@ -54,6 +53,7 @@
                     <!-- Protocols -->
                     <!-- Fairies -->
                 </div>
+                <p>Click on the stat names to sort the units.</p>
                 <p>Click on the unit's name to open the algorithm window.</p>
                 <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
             </section>
