--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>November 12, 2023</summary>
+                    Gamma Algorithms and Oath button added.
+                </details>
+                <details>
                     <summary>November 07, 2023</summary>
                     Created FAQ page.<br>
                     Added IDs 0, 1.
