--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -41,7 +41,7 @@
             <section id="main_content">
                 <details>
                     <summary>November 12, 2023</summary>
-                    Gamma Algorithms and Oath button added in Unit Stats.
+                    Gamma Algorithms and Oath, Intimacy buttons added in Unit Stats.
                 </details>
                 <details>
                     <summary>November 07, 2023</summary>
