--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -43,10 +43,10 @@
                 <div id="bonus">
                     <div>Bonus</div>
                     <span><label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough</label>   <span class="tooltiptext">Units at Lv.70 and 5★.</span></span>
-                    <span><label class="tooltip"><input type="checkbox" value="Bond" disabled/>Intimacy</label>         <span class="tooltiptext">Intimacy at Lv.15.</span></span>
+                    <span><label class="tooltip"><input type="checkbox" value="Bond" />Intimacy</label>                 <span class="tooltiptext">Intimacy at Lv.15.</span></span>
+                    <label><input type="checkbox" value="Oath" />Oath</label>
                     <span><label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta</label>           <span class="tooltiptext">Arma stats at Lv.30.</span></span>
                     <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms at Gold rarity and Efficiency at 2x.</span></span>
-                    <label><input type="checkbox" value="Oath" />Oath</label>
 
                     <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at max level<!-- Lv.??? -->.</span></span>
 
