--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Added Lind and Horizon.
+                </details>
+                <details>
                     <summary>November 12, 2023</summary>
                     Gamma Algorithms and Oath, Intimacy buttons added in Unit Stats.
                 </details>
