--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -40,8 +40,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
-                    Added Lind and Horizon.
+                    <summary>November 13, 2023</summary>
+                    Added Lind, Horizon, Hubble Arma.<br>
+                    Added event timers (temp).
                 </details>
                 <details>
                     <summary>November 12, 2023</summary>
