--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -44,12 +44,13 @@
                     <dd>Buff/Debuff applies after each Normal Attack hit.</dd>
 
                     <dt>Daiyan</dt>
-                    <dd>Concordia only affects the damaging parts of Active Skills.</dd>
+                    <dd>Concordia only affects the damaging parts of Active Skills and non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills.</dd>
                 </dl>
 
                 <dl>
                     <dt id="NormalAttackSkills">Normal Attack Skills</dt>
                     <dd>Can only critically strike through function sets and Bloodthirst Sigils.</dd>
+                    <dd>Activates only when unit deals Normal Attacks.</dd>
                 </dl>
             </section>
         </div>
