--- a/GFL/faqs/index.html
+++ b/GFL/faqs/index.html
@@ -12,12 +12,12 @@
         <!-- script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script -->
         <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script type="module" src="/univasset/scripts/include.js"></script>
-        <script type="module" src="./faqs.js"></script>
+        <script type="module" src="./index.js"></script>
         
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./faqs.css">
+        <link rel="stylesheet" href="./index.css">
         
         <!-- Setup theme-color -->
 
