--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -40,7 +40,7 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary>November 13, 2023</summary>
+                    <summary></summary>
                     Added Lind, Horizon, Hubble Arma.<br>
                     Added event timers (temp).
                 </details>
