--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>November 14, 2023</summary>
+                    Added Gray Zone tag.                    
+                </details>                
+                <details>
                     <summary>November 08, 2023</summary>
                     Added IDs 00475, 00476.<br>
                     Updated ID 00096.
