--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -40,9 +40,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>November 14, 2023</summary>
                     Added Lind, Horizon, Hubble Arma.<br>
-                    Added event timers (temp).
+                    Added event timers (temp).<br>
+                    TierList, Dolls, Miscellaneous, TopicPrimer tags added.<br>
+                    Added ID 2.
                 </details>
                 <details>
                     <summary>November 12, 2023</summary>
