--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>November 15, 2023</summary>
+                    Added IDs 00477, 00478, 00479.<br>
+                    Updated ID 00024.
+                </details>
+                <details>
                     <summary>November 14, 2023</summary>
                     Added Gray Zone tag.                    
                 </details>                
