--- a/GFL/returner.html
+++ b/GFL/returner.html
@@ -42,6 +42,12 @@
                     <dt>Gamepress</dt>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>
                 </dl>
+
+                <a href="#returning" id="returning"><h1>Should I come back to this game?</h1></a>
+                <p><del>Why did you leave in the first place?</del></p>
+                <p>If you only care about the story there's a <a href="https://xxx-yyy-xxx.github.io/GFL/faqs?id=00023">selection of materials</a> to choose from.</p>
+                <p>Everything else, please see <a href="https://xxx-yyy-xxx.github.io/GFL/starter#guide">the guides</a>.</p>
+
             </section>
         </div>
     </body>
