--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Updated ID 2.
+                </details>
+                <details>
                     <summary>November 14, 2023</summary>
                     Added Lind, Horizon, Hubble Arma.<br>
                     Added event timers (temp).<br>
