--- a/PNC/unitdata/index.html
+++ b/PNC/unitdata/index.html
@@ -30,7 +30,8 @@
 
         <div class="container">
             <section id="main_content">
-                <div></div>
+                <input type="text" placeholder="Filter..." />
+                <div id="table"></div>
             </section>
         </div>
     </body>
