--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>November 22, 2023</summary>
+                    Added IDs 00480, 00481.<br>
+                    Updated IDs 00149, 00286.<br>
+                    Changed ID 00151.
+                </details>
+                <details>
                     <summary>November 15, 2023</summary>
                     Added IDs 00477, 00478, 00479.<br>
                     Updated ID 00024.
