--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -40,7 +40,8 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>November 22, 2023</summary>
+                    Added ID 3, 4, 5, 6.<br>
                     Updated ID 2.
                 </details>
                 <details>
