--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -5,6 +5,7 @@
         <script type="module">
             import {googleDocsCompilation} from "/univasset/scripts/html/index.js";
 
+            // ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
             const DIV = googleDocsCompilation(
                 ["Project Neural Cloud Character Usage Tips (by Jurisdiction)", "https://docs.google.com/document/d/1IJAFKL61Lyxa9a1oXt0ACb7dKTa7819dtzWViS6RqBI"],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
@@ -17,12 +18,13 @@
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
                 ["Neural Cloud Gifts", "https://docs.google.com/spreadsheets/d/1vohWGNxRO0kXSBxAGlVBezleV2YgxnCHY2yE_4scdTc"],
                 ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
+                ["PNC Story Script", "https://drive.google.com/drive/folders/1gQTXlU2ITpYXzXO0SsCwCzNvCeFa7L01"], //https://old.reddit.com/r/GFLNeuralCloud/comments/17u8963/weekly_professors_lounge_november_13_2023/k9m058h/
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
                 ["PNC Calculator", "https://docs.google.com/spreadsheets/d/1_b9E22dIP526Axn4rUSBfLBKvQj7K1jB7iMfSiQBOdI"],
+                ["Just Abigail", "https://docs.google.com/spreadsheets/d/1Qekx9EWUwDWijVBbZBMcZBLPPE49jUmng3nX_oQ0ZEw"],
                 ["L.U.S.T. 2", "https://docs.google.com/spreadsheets/d/1FMK713okcJNQuCv625Ut0TZuQbm9RlHk7l1yOUF9Qdw"],
                 ['Algorithms', 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
             )
-            // ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
             document.querySelector("#main_content div").replaceWith(DIV)
         </script>
 
