--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -45,12 +45,15 @@
 
                     <dt>Daiyan</dt>
                     <dd>Concordia only affects the damaging parts of Active Skills and non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills.</dd>
+
+                    <!-- souchun arma 3 can bypass superarmor or just boss immunity? -->
                 </dl>
 
                 <dl>
                     <dt id="NormalAttackSkills">Normal Attack Skills</dt>
                     <dd>Can only critically strike through function sets and Bloodthirst Sigils.</dd>
                     <dd>Activates only when unit deals Normal Attacks.</dd>
+                    <dd>Is a direct effect of Normal Attacks.</dd>
                 </dl>
             </section>
         </div>
