--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -47,6 +47,7 @@
                     <dd>Concordia only affects the damaging parts of Active Skills and non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills.</dd>
 
                     <!-- souchun arma 3 can bypass superarmor or just boss immunity? -->
+                    <!-- antonina arma 3 can hit a single target twice, though only counts as normal attack -->
                 </dl>
 
                 <dl>
