--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -23,22 +23,11 @@
         <title>PNC Changelogs | Random Scraps</title>
     </head>
 
-    <style>
-        details {
-            --indent: 1rem;
-            padding-left: var(--indent);
-        }
-
-        summary {
-            margin-left: calc(-1 * var(--indent));
-        }
-    </style>
-
     <body>
         <include src="/univasset/scripts/pageheader/header.html" 0="Apparently this is a necessity"></include>
 
         <div class="container">
-            <section id="main_content">
+            <section id="main_content" class="changelog">
                 <details>
                     <summary>November 22, 2023</summary>
                     Added ID 3, 4, 5, 6.<br>
