--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -26,12 +26,6 @@
         <title>Unit Attack and Skill Quirks | Random Scraps</title>
     </head>
 
-    <style>
-        a[href^="#"] {
-            text-decoration: none;
-        }
-    </style>
-
     <body>
         <include src="/univasset/scripts/pageheader/header.html" 0="Questionable use on memebuiliding and theorycrafting"></include>
 
@@ -39,15 +33,18 @@
             <section id="main_content">
                 <dl>
                     <dt>Dushevnaya</dt>
-                    <dd>Normal Attack is turned into a 2-tile radius <a href="#NormalAttackSkills">Normal Attack Skill</a>.</dd>
+                    <dd>Normal Attack is turned into a 2-tile radius Normal Attack that cannot crit.</dd>
                     <dd>Active expands the Normal Attack to the whole field.</dd>
                     <dd>Buff/Debuff applies after each Normal Attack hit.</dd>
 
                     <dt>Daiyan</dt>
-                    <dd>Concordia only affects the damaging parts of Active Skills and non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills.</dd>
+                    <dd>Concordia only affects the damaging parts of Active Skills, non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills, and Ultimates.</dd>
 
-                    <!-- souchun arma 3 can bypass superarmor or just boss immunity? -->
-                    <!-- antonina arma 3 can hit a single target twice, though only counts as normal attack -->
+                    <dt>Vee</dt>
+                    <dd>Normal Attack is turned into an "infinite range" melee attack that cannot crit and cannot miss.</dd>
+
+                    <!-- souchun arma 3 can bypass superarmor or just boss immunity? or only effective on bosses with resist value-->
+                    <!-- antonina arma 3 can hit a single target twice, though only one counts as normal attack -->
                 </dl>
 
                 <dl>
@@ -55,6 +52,7 @@
                     <dd>Can only critically strike through function sets and Bloodthirst Sigils.</dd>
                     <dd>Activates only when unit deals Normal Attacks.</dd>
                     <dd>Is a direct effect of Normal Attacks.</dd>
+                    <!-- cannot activate other normal attack skills -->
                 </dl>
             </section>
         </div>
