--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -39,9 +39,10 @@
 
                     <dt>Daiyan</dt>
                     <dd>Concordia only affects the damaging parts of Active Skills, non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills, and Ultimates.</dd>
+                    <!-- Concordia does not work on derivative attacks. -->
 
                     <dt>Vee</dt>
-                    <dd>Normal Attack is turned into an "infinite range" melee attack that cannot crit and cannot miss.</dd>
+                    <dd>Normal Attack is turned into an "infinite range" melee attack.</dd>
 
                     <!-- souchun arma 3 can bypass superarmor or just boss immunity? or only effective on bosses with resist value-->
                     <!-- antonina arma 3 can hit a single target twice, though only one counts as normal attack -->
@@ -54,6 +55,8 @@
                     <dd>Is a direct effect of Normal Attacks.</dd>
                     <!-- cannot activate other normal attack skills -->
                 </dl>
+
+                <!-- return to last clicked "anchor to hash" -->
             </section>
         </div>
     </body>
