--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content" class="changelog">
                 <details>
+                    <summary>November 30, 2023</summary>
+                    Added IDs 00482, 00483, 00484, 00486, 00487, 00488.<br>
+                    Updated IDs 00169, 00058.
+                </details>
+                <details>
                     <summary>November 22, 2023</summary>
                     Added IDs 00480, 00481.<br>
                     Updated IDs 00149, 00286.<br>
