--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -29,8 +29,13 @@
         <div class="container">
             <section id="main_content" class="changelog">
                 <details>
+                    <summary>November 30, 2023</summary>
+                    Added IDs 7, 8.<br>
+                    Google Doc Guides collection updated.
+                </details>
+                <details>
                     <summary>November 22, 2023</summary>
-                    Added ID 3, 4, 5, 6.<br>
+                    Added IDs 3, 4, 5, 6.<br>
                     Updated ID 2.
                 </details>
                 <details>
