--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -13,6 +13,7 @@
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ['PNC Algo Mainstat Viability List', 'https://docs.google.com/spreadsheets/d/1DSK4d94RdRCV_ji7NXC0Klyf7v_dUkIY9n9qW9y2UeQ'],
                 ['PNC Neural Cloud Projections', 'https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU'],
+                ["MMG Entry 1: Team Building", "https://docs.google.com/spreadsheets/d/1KxJgCmfdLt3MbE1IC4T38hOCfauxSGQ6B2to8doXig8"],
                 ['Neural Cloud Numbers Sheet', 'https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc'],
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
