--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -41,19 +41,24 @@
                     <label><input type="checkbox" value="Medic" checked /></label>
                 </div>
                 <div id="bonus">
-                    <div>Bonus</div>
+                    <div>Pre-Battle Bonus</div>
                     <span><label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough</label>   <span class="tooltiptext">Units at Lv.70 and 5★.</span></span>
                     <span><label class="tooltip"><input type="checkbox" value="Bond" />Intimacy</label>                 <span class="tooltiptext">Intimacy at Lv.15.</span></span>
-                    <label><input type="checkbox" value="Oath" />Hearts As One</label>
+                    <span><label class="tooltip"><input type="checkbox" value="Oath" />Hearts As One</label>            <span class="tooltiptext">Available after Oath.</span></span>
+                    
                     <span><label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta</label>           <span class="tooltiptext">Arma stats at Lv.30.</span></span>
                     <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms at Gold rarity and Efficiency at 2x.</span></span>
 
                     <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at max level<!-- Lv.??? -->.</span></span>
 
-                    <!-- Functions -->
-                    <!-- Protocols -->
                     <!-- Fairies -->
                 </div>
+
+                <!-- battle bonus -->
+                <!-- unit skills -->
+                <!-- Functions -->
+                <!-- Protocols -->
+
                 <p>Click on the stat names to sort the units.</p>
                 <p>Click on the unit's name to open the algorithm window.</p>
                 <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
@@ -99,12 +104,6 @@
         "event" : "Christmas"
     },
     {
-        "name" : "Erika",
-        "reference" : {"" : ""},
-        "fragments" : ["Fragment Search"],
-        "event" : ""
-    },
-    {
         "name" : "Cascadia",
         "reference" : {"" : ""},
         "fragments" : ["Fragment Search"],
@@ -142,6 +141,10 @@
     },
     {
         "name" : "Kimie",
+        "reference" : {"" : ""}
+    },
+    {
+        "name" : "Penumbra",
         "reference" : {"" : ""}
     },
 ] -->
