--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -29,6 +29,10 @@
         <div class="container">
             <section id="main_content" class="changelog">
                 <details>
+                    <summary></summary>
+                    Added IDs 9, 10.
+                </details>
+                <details>
                     <summary>November 30, 2023</summary>
                     Added IDs 7, 8.<br>
                     Google Doc Guides collection updated.
