--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
+        <link rel="stylesheet" href="/univasset/scripts/changelog.css">
         
         <!-- Setup theme-color -->
 
@@ -27,7 +28,12 @@
         <include src="/univasset/scripts/pageheader/header.html" 0="For those who want to reminisce on the has-beens"></include>
 
         <div class="container">
-            <section id="main_content" class="changelog">
+            <section id="main_content">
+                <details>
+                    <summary>December 06, 2023</summary>
+                    Added IDs 00469, 00470, 00471.<br>
+                    Updated ID 00032.
+                </details>
                 <details>
                     <summary>November 30, 2023</summary>
                     Added IDs 00482, 00483, 00484, 00486, 00487, 00488.<br>
