--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -38,8 +38,8 @@
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <dl>
                     <dt>Catching up</dt>
-                    <dd>In-game facility called Forward Basecamp that gives a bevy of items for raising Tactical Dolls (your main fighting force).</dd>
-                    <dd>Protocol Assimilation for steamrolling early to mid-game content.</dd>
+                    <dd>In-game facility called Forward Basecamp that gives a bevy of items for raising Tactical Dolls (your main fighting force). Unlocks at Commander Lv.20.</dd>
+                    <dd>Protocol Assimilation for steamrolling early to mid-game content. Unlocks upon clearing Chapter 7, Stage 5.</dd>
                     <dd>Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</dd>
 
                     <dt>Contents</dt>
@@ -71,7 +71,7 @@
                 <p>TLDR; For the most part, the answer is no.</p>
 
                 <a href="#F2P" id="F2P"><h1>Is this game F2P?</h1></a>
-                <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit.</p>
+                <p>Very much so to the point that quite a number of them are top rankers in major event rankings, the endgame. It's more about the breadth of units you have than the power of each individual unit, especially since you'll be using 20+ units per stage.</p>
                 <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool during end game.</p>
 
                 <a href="#difficulty" id="difficulty"><h1>How is the difficulty in this game?</h1></a>
@@ -90,7 +90,7 @@
                         <tr>
                             <td>Early game</td>
                             <td>Simple auto-battle</td>
-                            <td>Any team is fine, using friend echelons adviced</td>
+                            <td>Any team is fine, using friend echelons advised</td>
                             <td>Kill enemies, capture command posts</td>
                             <td>Low resources and income, using MGs not recommended</td>
                             <td>Building facilities and core units</td>
