--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
+        <link rel="stylesheet" href="/univasset/scripts/changelog.css">
         
         <!-- Setup theme-color -->
 
@@ -27,10 +28,10 @@
         <include src="/univasset/scripts/pageheader/header.html" 0="Apparently this is a necessity"></include>
 
         <div class="container">
-            <section id="main_content" class="changelog">
+            <section id="main_content">
                 <details>
-                    <summary></summary>
-                    Added IDs 9, 10.
+                    <summary>December 06, 2023</summary>
+                    Added IDs 9, 10, 11.
                 </details>
                 <details>
                     <summary>November 30, 2023</summary>
