--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -30,6 +30,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Updated ID 0.<br>
+                    Undine, Millau Arma added.
+                </details>
+                <details>
                     <summary>December 06, 2023</summary>
                     Added IDs 9, 10, 11.
                 </details>
