--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -7,10 +7,12 @@
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
         <h2><include key="0"></include></h2>
 
-        <section id="downloads">
-            <a href="/GFL" class="btn btn-gfl"><span class="icon"></span>Girls' Frontline</a>
-            <a href="/PNC" class="btn btn-pnc"><span class="icon"></span>Neural Cloud</a>
-            <a href="/EXI" class="btn btn-exi"><span class="icon"></span>Exilium</a>
+        <section id="downloads">    <!-- wide window mode -->
+            <a href="/GFL" class="btn-gfl"><span class="icon"></span>Girls' Frontline</a>
+            <a href="/PNC" class="btn-pnc"><span class="icon"></span>Neural Cloud</a>
+            <a href="/EXI" class="btn-exi"><span class="icon"></span>Exilium</a>
         </section>
+
+        <!-- narrow window mode -->
     </div>
 </header>
