--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -31,7 +31,7 @@
             <section id="main_content">
                 <details>
                     <summary></summary>
-                    Updated ID 0.<br>
+                    Updated IDs 0, 2.<br>
                     Undine, Millau Arma added.
                 </details>
                 <details>
