--- a/PNC/index.html
+++ b/PNC/index.html
@@ -39,8 +39,7 @@
                     <a href="./changelog">Changelog</a>
                 </div>
 
-                <div id="current"></div>
-                <div id="previous"></div>
+                <div id="timer-field"></div>
             </section>
         </div>
     </body>
