--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -8,9 +8,9 @@
         <h2><include key="0"></include></h2>
 
         <section id="downloads">    <!-- wide window mode -->
-            <a href="/GFL" class="btn-gfl"><span class="icon"></span>Girls' Frontline</a>
-            <a href="/PNC" class="btn-pnc"><span class="icon"></span>Neural Cloud</a>
-            <a href="/EXI" class="btn-exi"><span class="icon"></span>Exilium</a>
+            <a href="/GFL" class="btn-gfl"><span></span>Girls' Frontline</a>
+            <a href="/PNC" class="btn-pnc"><span></span>Neural Cloud</a>
+            <a href="/EXI" class="btn-exi"><span></span>Exilium</a>
         </section>
 
         <!-- narrow window mode -->
