--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 
         <div class="container">
             <section id="main_content">
-                <!--p>Created and maintained by u/BOOM_all_pass. For comments, suggestions, or violent reactions, ping this user in the respectives guide's subreddit.</p-->
+                <!-- <p>Created and maintained by u/BOOM_all_pass. For comments, suggestions, or violent reactions, ping this user in the respectives guide's subreddit.</p> -->
             </section>
         </div>
     </body>
 </html>
+
+<!-- https://stackoverflow.com/questions/37594459/fatal-failed-to-resolve-head-as-a-valid-ref -->
