--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -30,8 +30,13 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>December 13, 2023</summary>
+                    Added IDs 00492, 00493, 00494, 00495.<br>
+                    Updated IDs 00024, 00265.
+                </details>
+                <details>
                     <summary>December 06, 2023</summary>
-                    Added IDs 00469, 00470, 00471.<br>
+                    Added IDs 00489, 00490, 00491.<br>
                     Updated ID 00032.
                 </details>
                 <details>
