--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -3,10 +3,10 @@
     <head>
         <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module">
-            import {googleDocsCompilation} from "/univasset/scripts/html/index.js";
+            import {Embed} from "/univasset/scripts/html/index.js";
 
             // ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
-            const DIV = googleDocsCompilation(
+            const DIV = Embed.google(
                 ["Project Neural Cloud Character Usage Tips (by Jurisdiction)", "https://docs.google.com/document/d/1IJAFKL61Lyxa9a1oXt0ACb7dKTa7819dtzWViS6RqBI"],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
                 ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
@@ -17,7 +17,6 @@
                 ['Neural Cloud Numbers Sheet', 'https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc'],
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
-                ["Neural Cloud Gifts", "https://docs.google.com/spreadsheets/d/1vohWGNxRO0kXSBxAGlVBezleV2YgxnCHY2yE_4scdTc"],
                 ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
                 ["PNC Story Script", "https://drive.google.com/drive/folders/1gQTXlU2ITpYXzXO0SsCwCzNvCeFa7L01"], //https://old.reddit.com/r/GFLNeuralCloud/comments/17u8963/weekly_professors_lounge_november_13_2023/k9m058h/
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
