--- a/PNC/index.html
+++ b/PNC/index.html
@@ -31,6 +31,7 @@
             <section id="main_content">
                 <div id="links">
                     <a href="./faqs">Frequently Asked Questions</a>
+                    <a href="./starter">Starter Guide</a>
                     <a href="./unitstats">Unit Stats</a>
                     <a href="./unitdata">Unit Data</a>
                     <a href="./unitskills">Unit Skills</a>
