--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -30,9 +30,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
-                    Updated IDs 0, 2.<br>
-                    Undine, Millau Arma added.
+                    <summary>December 13, 2023</summary>
+                    Added IDs 13, 14, 15, 16.<br>
+                    Updated IDs 0, 2, 8, 11.<br>
+                    Undine, Millau Arma added.<br>
+                    Added Starter Guide.
                 </details>
                 <details>
                     <summary>December 06, 2023</summary>
