--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -30,6 +30,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    NeuralFragments tag added.
+                </details>
+                <details>
                     <summary>December 13, 2023</summary>
                     Added IDs 13, 14, 15, 16.<br>
                     Updated IDs 0, 2, 8, 11.<br>
