--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -47,7 +47,7 @@
                     <span><label class="tooltip"><input type="checkbox" value="Oath" />Hearts As One</label>            <span class="tooltiptext">Available after Oath.</span></span>
                     
                     <span><label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta</label>           <span class="tooltiptext">Arma stats at Lv.30.</span></span>
-                    <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms at Gold rarity and Efficiency at 2x.</span></span>
+                    <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms and substats at Gold rarity, and Efficiency at 2x.</span></span>
 
                     <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at max level<!-- Lv.??? -->.</span></span>
 
@@ -58,6 +58,7 @@
                 <!-- unit skills -->
                 <!-- Functions -->
                 <!-- Protocols -->
+                <!-- algo 3set -->
 
                 <p>Click on the stat names to sort the units.</p>
                 <p>Click on the unit's name to open the algorithm window.</p>
@@ -140,5 +141,17 @@
     {
         "name" : "Penumbra",
         "reference" : {"" : ""}
+    },
+    {
+        "name" : "Okabe",
+        "reference" : {"sg" : ""}
+    },
+    {
+        "name" : "Kurisu",
+        "reference" : {"sg" : ""}
+    },
+    {
+        "name" : "Mayuri",
+        "reference" : {"sg" : ""}
     },
 ] -->
