--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -30,8 +30,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
-                    NeuralFragments tag added.
+                    <summary>December 20, 2023</summary>
+                    Added IDs 17, 18.<br>
+                    NeuralFragments, StoryAndEvents tags added.
                 </details>
                 <details>
                     <summary>December 13, 2023</summary>
