--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -30,6 +30,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>December 20, 2023</summary>
+                    Added IDs 00497, 00498, 00499, 00500.
+                </details>
+                <details>
                     <summary>December 13, 2023</summary>
                     Added IDs 00492, 00493, 00494, 00495.<br>
                     Updated IDs 00024, 00265.
