--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -30,6 +30,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Added ID 19.<br>
+                    DailyWeeklyMissions tag added.
+                </details>
+                <details>
                     <summary>December 20, 2023</summary>
                     Added IDs 17, 18.<br>
                     NeuralFragments, StoryAndEvents tags added.
