--- a/EXI/index.html
+++ b/EXI/index.html
@@ -20,11 +20,11 @@
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
 
-        <title>Exillium | Random Scraps</title>
+        <title>Exilium | Random Scraps</title>
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Upcoming game: Exilium"></include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Released in CN"></include>
 
         <div class="container">
             <section id="main_content">
