--- a/PNC/faqs/index.html
+++ b/PNC/faqs/index.html
@@ -30,7 +30,8 @@
 
         <div class="container">
             <section id="main_content">
-                <div class="tab-button">
+                <include src="/univasset/scripts/faqs/index.html"></include>
+                <!-- <div class="tab-button">
                     <label><input type="radio" name="tabs" value="Keywords" checked /><h2>Keywords</h2></label>
                     <label><input type="radio" name="tabs" value="Tags" /><h2>Tags</h2></label>
                     <label><input type="radio" name="tabs" value="Browse" /><h2>Browse</h2></label>
@@ -46,7 +47,7 @@
                 <div id="Tags" class="tab-body">
                     <form>
                         <div></div>
-                        <input type="text" name="tags" style="display: none;">                        
+                        <input type="text" name="tags">                        
                         <input type="submit">
                     </form>
                 </div>
@@ -59,7 +60,7 @@
                     <button type="button" value="last">Last</button>
                 </div>
 
-                <div id="cards-field"></div>
+                <div id="cards-field"></div> -->
             </section>
         </div>
     </body>
