--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -12,7 +12,8 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/faqs/index.css">
+        <!-- <link rel="stylesheet" href="/univasset/scripts/faqs/index.css"> -->
+        <link rel="stylesheet" href="./index.css">
         
         <!-- Setup theme-color -->
 
