--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -5,8 +5,8 @@
         <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module">
             import {getQueryJS} from "/univasset/scripts/faqs/index.js";
-            import {dtag, cardData} from "./query.js"
-            getQueryJS(dtag, cardData);
+            import {dTag, cardData} from "./query.js"
+            getQueryJS(dTag, cardData);
         </script>
         
         <meta charset='utf-8'>
